feat: Added first book
- Added a review for atomic habits
- Removed unnecessary code
- Cleaned up a few bugs

--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -16,7 +16,7 @@ import Themeswitch from "./themeswitch.astro";
       <span>&middot;</span>
       <span>
         <a
-          href="https://github.com/web3templates/stablo-astro"
+          href="https://github.com/Brian-Kariu/"
           rel="noopener"
           target="_blank">
           Github
