--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -4,12 +4,14 @@ import Authorcard from "@components/authorcard.astro";
 import Container from "@components/container.astro";
 import Label from "@components/ui/label.astro";
 import { authors } from "@data/authors";
+import { books } from "@data/books";
 import { categories } from "@data/category";
 import Layout from "@layouts/Layout.astro";
 import { getFormattedDate } from "@utils/all";
 import { CollectionEntry, getCollection } from "astro:content";
 
 import type { Author } from "@data/authors";
+import type { Books } from "@data/books";
 import type { Category } from "@data/category";
 
 type Props = CollectionEntry<"blog">;
@@ -27,7 +29,8 @@ const { post } = Astro.props;
 
 const { Content, remarkPluginFrontmatter } = await post.render();
 
-const author = authors.find((item) => item.slug === post.data.author) as Author;
+const author = authors.find((item) => item) as Author;
+const book = books.find((item) => item) as Books;
 const category = categories.find(
   (item) => item.slug === post.data.category
 ) as Category;
@@ -89,14 +92,14 @@ const category = categories.find(
   <div
     class="relative z-0 max-w-screen-lg mx-auto overflow-hidden lg:rounded-lg aspect-video">
     {
-      post.data.image && (
+      book.image && (
         <Picture
-          src={post.data.image}
+          src={book.image}
           widths={[200, 400, 800]}
           sizes="(max-width: 640px) 90vw, 480px"
           aspectRatio="16:9"
           width={1024}
-          heignt={576}
+          height={576}
           alt="Thumbnail"
           loading="eager"
           class="w-full"
