--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -15,18 +15,18 @@ import Pagetitle from "@components/pagetitle.astro";
 
     <div class="grid md:grid-cols-2 gap-10 mx-auto max-w-4xl mt-16">
       <div>
-        <h2 class="font-medium text-2xl text-gray-800">Contact Me</h2>
-        <p class="text-lg leading-relaxed text-gray-500 mt-3">
+        <h2 class="font-medium text-2xl light:text-gray-800">Contact Me</h2>
+        <p class="text-lg leading-relaxed  light:text-gray-500 mt-3">
           Have something to say? I am here to help. Fill up the form or send
           email or call phone.
         </p>
         <div class="mt-5">
-          <div class="flex items-center mt-2 space-x-2 text-gray-600">
-            <Icon class="text-gray-400 w-4 h-4" name="uil:map-marker" />
+          <div class="flex items-center mt-2 space-x-2 light:text-gray-600">
+            <Icon class="light:text-gray-400 w-4 h-4" name="uil:map-marker" />
             <span>Nairobi, Kenya</span>
           </div><div class="flex items-center mt-2 space-x-2 text-gray-600">
-            <Icon class="text-gray-400 w-4 h-4" name="uil:envelope" /><a
-              href="mailto:hello@stablotemplate.com">waiganjo.brian@gmail.com.com</a
+            <Icon class="light:text-gray-400 dark:text-white w-4 h-4" name="uil:envelope" /><a
+              class="dark:text-white" href="fakeemail.com">waiganjo.brian@gmail.com.com</a
             >
           </div>
         </div>
